fix: override text-wrap: pretty for tiptap editor paragraphs (#3844)

--- a/packages/tiptap/src/styles/base.css
+++ b/packages/tiptap/src/styles/base.css
@@ -30,6 +30,7 @@
 
   p {
     margin-bottom: 0.25rem;
+    text-wrap: wrap;
   }
 
   .node-image {
